# tiberate-fhe

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  clean.sh  justfile  main.py  pyproject.toml  readme.md  setup.py  tiberate.code-workspace
.github/workflows/: build-and-publish-pypi.yaml
csrc/: .clangd  CMakeLists.txt  chacha20.cpp  discrete_gaussian.cpp  extensions.h  macros.h  mont.cpp  mont_fused.cpp  ntt.cpp  ntt_fused.cpp  randint.cpp  randround.cpp  readme.md
csrc/csprng/: chacha20.cpp  chacha20.h  chacha20_cuda_kernel.cu  discrete_gaussian.cpp  discrete_gaussian_cuda_kernel.cu  randint.cpp  randint_cuda_kernel.cu  randround.cpp  randround_cuda_kernel.cu
csrc/cuda/: chacha20_cuda.cu  chacha20_cuda.h  discrete_gaussian_cuda.cu  discrete_gaussian_cuda.h  mont_common.cuh  mont_cuda.cu  mont_cuda.h  mont_cuda_kernel.cuh  mont_fused_cuda.cu  mont_fused_cuda.h  ntt_cuda.cu  ntt_cuda.h  ntt_fused_cuda.cu  ntt_fused_cuda.h  randint_cuda.cu  randint_cuda.h  randround_cuda.cu  randround_cuda.h
csrc/ntt/: mont_op_cuda_kernel.cu  ntt.cpp  ntt.h  ntt_cuda_kernel.cu
tests/: test_compiler.py  test_engine_ops.py  test_generate_engine.py  whatever.py
tiberate/: __init__.py  _cli.py  cache.py  compiler.py  config.py  errors.py  ops.py  typing.py
tiberate/config/: __init__.py  ckks_config.py
tiberate/context/: mont_context.py  ntt_context.py  rns_partition.py  rns_partition_pq.py
tiberate/csprng/: csprng.py  discrete_gaussian_cuda_kernel.cu  randint_cuda_kernel.cu
tiberate/engine/: __init__.py  ckks_engine.py  ntt_context.py
tiberate/extension/: __init__.py  mpc.py  multigpu.py
tiberate/extension/benchmarks/: __init__.py
tiberate/extension/benchmarks/bench/: __init__.py  example_bench.py  interface.py  lat_of_each_level.py  linear_feature_wise.py  readme.md  single_cmult.py  single_pmult.py
tiberate/extension/benchmarks/cli/: bench_selector.tcss  print_bench_result_vis.py  selector.py
tiberate/extension/benchmarks/components/: interface.py  linear_feature_wise.py
tiberate/extension/benchmarks/packing/: feature_wise_compact.py  interface.py
tiberate/fhe/: __init__.py  typing.py
tiberate/fhe/context/: __init__.py  cache.py  check_prim.py  ckks_context.py  generate_primes.py  presets.py
tiberate/fhe/context/cache/: cache.py
tiberate/fhe/encdec/: __init__.py  encdec.py
tiberate/fhe/engine/: __init__.py  ckks_engine.py  errors.py
tiberate/fhe/engine/extension/: mpc_extension.py
tiberate/jit/: __init__.py  compiler.py  tracing.py
tiberate/nn/: functional.py
tiberate/ntt/: __init__.py  ntt_context.py  ntt_cuda_kernel.cu  rns_partition.py
tiberate/prim/: generate_primes.py
tiberate/rng/: __init__.py  interface.py
tiberate/rng/csprng/: __init__.py  chacha20.cpp  chacha20_naive.py  csprng.py  discrete_gaussian.cpp  discrete_gaussian_sampler.py  randint.cpp  randround.cpp  randround_cuda_kernel.cu
tiberate/rng/simplerng/: __init__.py  simplerng.py
tiberate/utils/: encoding.py  generate_primes.py  massive.py  mvc.py
