[project]
name = "tiberate-fhe"
version = "0.1.0"
description = "t(yped-l)iberate-fhe: a variant of Desilo/liberate-fhe with better typing."
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause-Clear"
keywords = [
    "python",
    "cryptoghraphy",
    "privacy",
    "encryption",
    "cuda",
    "homomorphic encryption",
    "homomorphic encryption library",
    "fhe",
    "gpu accelerated",
    "liberate",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mpmath>=1.3.0",
    "numpy>=2.2.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.0",
    "joblib>=1.2.0",
    "scipy>=1.10.0",
]

[project.urls]
Repository = "https://github.com/wens-lab/tiberate-fhe"

[project.scripts]
clean = "clean:clean_project"

[tool.hatch.build.targets.sdist]
include = [
    "tiberate/csprng/*.so",
    "tiberate/ntt/*.so",
]
exclude = [
    "tiberate/csprng/setup.py",
    "tiberate/csprng/*.cu",
    "tiberate/csprng/*.cpp",
    "tiberate/csprng/*.h",
    "tiberate/ntt/*.cpp",
    "tiberate/ntt/*.cu",
    "tiberate/ntt/setup.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "tiberate/csprng/*.so",
    "tiberate/ntt/*.so",
]
exclude = [
    "tiberate/csprng/setup.py",
    "tiberate/csprng/*.cu",
    "tiberate/csprng/*.cpp",
    "tiberate/csprng/*.h",
    "tiberate/ntt/*.cpp",
    "tiberate/ntt/*.cu",
    "tiberate/ntt/setup.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
