[tool.poetry]
name = "tiberate"
version = "0.9.1"
description = "T(yped-l)iberate-fhe: a variant of Liberate-fhe with better typing"
authors = [
    "Juwhan Kim <juwhan.kim@desilo.ai>",
    "Hanyul Ryu <hanyul.ryu@desilo.ai>",
    "Gavin Gong <gavin@gong.host>"
]
maintainers = [
    "Gavin Gong <gavin@gong.host>"
]
readme = [
    "README.md"
]
build = "setup.py"

repository = "https://github.com/wens-lab/tiberate-fhe"

license = "BSD-3-Clause-Clear"

keywords = [
    "DESILO", "python", "cryptoghraphy", "privacy", "encryption", "cuda",
    "homomorphic encryption", "homomorphic encryption library", "fhe", "gpu accelerated", "liberate"
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
mpmath = ">=1.3.0"
torch = ">=2.2.0"
pytest = "^8.3.0"
pre-commit = "^4.1.0"
loguru = "^0.7.3"
numpy = "^2.2.3"
joblib = "^1.4.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
nvtx = "^0.2.11"
vdtoys = "^0.1.0"

[build-system]
requires = ["poetry-core", "torch", "setuptools"]
build-backend = "poetry.core.masonry.api"
