[build-system]
requires = ["scikit-build-core >=0.4.3", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "tiberate"
version = "0.9.9"
description = "T(yped-l)iberate-fhe: a variant of Liberate-fhe with better typing"
authors = [
    { name = "Juwhan Kim", email = "juwhan.kim@desilo.ai" },
    { name = "Hanyul Ryu", email = "hanyul.ryu@desilo.ai" },
    { name = "Gavin Gong", email = "gavin@gong.host" },
]
requires-python = ">=3.10"
maintainers = [{ name = "Gavin Gong", email = "gavin@gong.host>" }]
readme = "README.md"
license = "BSD-3-Clause-Clear"
keywords = [
    "DESILO",
    "python",
    "cryptoghraphy",
    "privacy",
    "encryption",
    "cuda",
    "homomorphic encryption",
    "homomorphic encryption library",
    "fhe",
    "gpu accelerated",
    "liberate",
]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mpmath>=1.3.0",
    "numpy>=2.2.5",
    "nvtx>=0.2.11",
    "scikit-build-core>=0.11.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "vdtoys>=0.1.4",
]
[project.urls]
Repository = "https://github.com/VisualDust/tiberate-fhe"

[tool.scikit-build]
build-dir = "build"
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
cmake.verbose = true
wheel.install-dir = "tiberate"
wheel.packages = ["tiberate"]
